--- a/docs/theme/mlflow/static/css/custom.css
+++ b/docs/theme/mlflow/static/css/custom.css
@@ -1125,5 +1125,44 @@ text-transform: capitalize;
     margin-right: 0; /* Resetting any margin for the right-most box */
 }
 
+/**
+ * Hierarchical relationships diagram
+ */
 
+.hierarchy-container {
+    font-family: Arial, sans-serif;
+    margin: 7.5px;
+    position: relative;
+}
+
+.hierarchy-item {
+    display: block; /* Start each element on a new line */
+    width: fit-content; /* Adjust box width to the text */
+    border-radius: 10px;
+    background-color: #f0f0f0;
+    padding: 4px 8px; /* Vertical and horizontal padding */
+    margin: 4px 0; /* Vertical margin */
+    border: 2px solid #0194E2;
+    position: relative;
+}
+
+.level-1 { margin-left: 40px; }
+.level-2 { margin-left: 80px; }
+.level-3 { margin-left: 120px; }
+.level-4 { margin-left: 160px; }
+
+
+/**
+ * Download button for notebooks
+ */
+a.download-btn {
+    display: inline-block;
+    padding: 8px 12px;
+    border: 1px solid #007acc;
+    background-color: #007acc;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
 
