--- a/docs/theme/mlflow/static/css/custom.css
+++ b/docs/theme/mlflow/static/css/custom.css
@@ -1102,7 +1102,7 @@ text-transform: capitalize;
 
 
 /**
- * Display boxes
+ * Display boxes for text breakout list structures
  */
 
 .boxes-wrapper {
@@ -1168,7 +1168,7 @@ a.download-btn {
 
 
 /**
-  * Main landing page grid display
+  * Main landing page grid display and site section buttons
   */
 
 /* Main container for the grid of buttons */
