change to JS to force the download
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/theme/mlflow/static/css/custom.css
+++ b/docs/theme/mlflow/static/css/custom.css
@@ -1289,7 +1289,7 @@ text-transform: capitalize;
 
 
 /**
- * Download button for notebooks
+ * Download button
  */
  a.download-btn {
   display: inline-block;
@@ -1307,6 +1307,29 @@ a.download-btn i.fas {
   margin-right: 5px;  /* Add some space between the icon and the text */
 }
 
+/**
+ * Download button specifically for notebooks
+ */
+ a.notebook-download-btn {
+  display: inline-block;
+  padding: 8px 12px;
+  border: 1px solid #007acc;
+  background-color: #007acc;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  font-family: "Source Sans Pro";
+  transition: background-color 0.3s ease; 
+}
+
+a.notebook-download-btn:hover {
+  background-color: #005fa3; 
+}
+
+a.notebook-download-btn i.fas {
+  margin-right: 5px;  
+}
 
 /**
  * Overrides to the nbsphinx modifications to the .highlight class that strips the clippy implementation (copy of code)
