Add documentation for tracing SDK
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/docs/src/components/Card/card.module.css
+++ b/docs/src/components/Card/card.module.css
@@ -165,3 +165,62 @@
   justify-content: space-between;
   flex: 1;
 }
+
+.TitleCardContent {
+  width: 100%;
+}
+
+.TitleCardTitle {
+  font-size: 1.2rem;
+  color: var(--ifm-heading-color);
+  font-weight: 600;
+}
+
+.TitleCardSeparator {
+  border: 0;
+  border-top: 1px solid var(--docusaurus-tag-list-border);
+}
+
+/* Column configurations */
+.Cols1 {
+  grid-template-columns: 1fr;
+}
+
+.Cols2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.Cols3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.Cols4 {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.Cols5 {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.Cols6 {
+  grid-template-columns: repeat(6, 1fr);
+}
+
+/* Responsive behavior for column layouts */
+@media (max-width: 1500px) {
+  .Cols6, .Cols5, .Cols4 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1200px) {
+  .Cols6, .Cols5, .Cols4, .Cols3 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 750px) {
+  .Cols6, .Cols5, .Cols4, .Cols3, .Cols2 {
+    grid-template-columns: 1fr;
+  }
+}
